--- a/src/stylesheet/Variables.scss
+++ b/src/stylesheet/Variables.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;300;400;600;700&display=swap');
 $bg_color : #f3f3f3;
-$main_color : purple;
+$main_color : rgb(128, 0, 0);
 
 //#F4C430
 $font: 'Kanit', sans-serif;
